set(ProjectName "endecode")
if(BUILD_SHARED_LIBS)
    CreateTarget(${ProjectName} "Dll" "core")
    target_compile_definitions(${ProjectName} PRIVATE -DENDECODE_EXPORT)
else()
    CreateTarget(${ProjectName} "Lib" "core")
    target_compile_definitions(${ProjectName} PUBLIC -DENDECODE_STATIC)
endif()

if(BUILD_VCPKG)
    target_link_libraries(${ProjectName} PkgConfig::gmp)
endif()
